--- a/Argo/my-db-mongo.yaml
+++ b/Argo/my-db-mongo.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: my-app-nodejs
+  name: my-db-mongo
   namespace: argo
 spec:
   destination:
@@ -9,7 +9,7 @@ spec:
     server: 'https://kubernetes.default.svc'
   project: default
   source: 
-    path: kubernetes/nodejs-app/.
+    path: kubernetes/mongo-DB/.
     repoURL: 'https://github.com/Badawi02/test.git'
     targetRevision: HEAD
   syncPolicy:
