--- a/Argo/my-app-nodejs.yaml
+++ b/Argo/my-app-nodejs.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   destination:
     namespace: dev
-    server: 'https://kubernetes.app-svc.svc'
+    server: 'https://kubernetes.default.svc'
   project: default
   source: 
     path: kubernetes/nodejs-app/.
